@@ -138,6 +138,8 @@ public:
         there is no piece at this location. */
     Q_INVOKABLE PieceModel* addEmpty(const QPoint& pos);
 
+    Q_INVOKABLE void clearRecentFiles();
+
     Q_INVOKABLE bool createFolder(const QUrl& folder);
 
     Q_INVOKABLE void deleteAllVar();
