@@ -1205,7 +1205,7 @@ Mnemonic for menu item Make Main Variation. Leave empty for no mnemonic.</extrac
     </message>
     <message>
         <source>Open Recent</source>
-        <translation>Zuletzt benutzte Dateien</translation>
+        <translation type="vanished">Zuletzt benutzte Dateien</translation>
     </message>
     <message>
         <source>Open from Clipboard</source>
@@ -1214,7 +1214,7 @@ Mnemonic for menu item Make Main Variation. Leave empty for no mnemonic.</extrac
     <message>
         <source>P</source>
         <extracomment>Mnemonic for menu Open Recent. Leave empty for no mnemonic.</extracomment>
-        <translation>B</translation>
+        <translation type="vanished">B</translation>
     </message>
     <message>
         <source>S</source>
@@ -1238,7 +1238,7 @@ Mnemonic for menu item Make Main Variation. Leave empty for no mnemonic.</extrac
     <message>
         <source>%1. %2</source>
         <extracomment>Format in recent files menu. First argument is the file number, second argument the file name.</extracomment>
-        <translation>%1. %2</translation>
+        <translation type="vanished">%1. %2</translation>
     </message>
 </context>
 <context>
@@ -1310,6 +1310,33 @@ Mnemonic for menu item Make Main Variation. Leave empty for no mnemonic.</extrac
         <source>Shift</source>
         <extracomment>Shortcut modifier key as displayed in menu item text (abbreviate if long)</extracomment>
         <translation>Umschalt</translation>
+    </message>
+</context>
+<context>
+    <name>MenuRecentFiles</name>
+    <message>
+        <source>Open Recent</source>
+        <translation>Zuletzt benutzte Dateien</translation>
+    </message>
+    <message>
+        <source>P</source>
+        <extracomment>Mnemonic for menu Open Recent. Leave empty for no mnemonic.</extracomment>
+        <translation>B</translation>
+    </message>
+    <message>
+        <source>%1. %2</source>
+        <extracomment>Format in recent files menu. First argument is the file number, second argument the file name.</extracomment>
+        <translation>%1. %2</translation>
+    </message>
+    <message>
+        <source>Clear List</source>
+        <extracomment>Menu item for clearing the recent files list</extracomment>
+        <translation>Liste leeren</translation>
+    </message>
+    <message>
+        <source>C</source>
+        <extracomment>Mnemonic for menu item Recent Files/Clear List. Leave empty for no mnemonic.</extracomment>
+        <translation>L</translation>
     </message>
 </context>
 <context>
