@@ -1022,7 +1022,7 @@
         <extracomment>Mnemonic for menu item Move Annotation. Leave empty for no mnemonic.
 ----------
 Mnemonic for menu item Make Main Variation. Leave empty for no mnemonic.</extracomment>
-        <translation>H</translation>
+        <translation>A</translation>
     </message>
     <message>
         <source>Move Variation Up</source>
@@ -1193,7 +1193,7 @@ Mnemonic for menu item Make Main Variation. Leave empty for no mnemonic.</extrac
     </message>
     <message>
         <source>Open Recent</source>
-        <translation>Åpne nylige</translation>
+        <translation type="vanished">Åpne nylige</translation>
     </message>
     <message>
         <source>Open from Clipboard</source>
@@ -1202,7 +1202,7 @@ Mnemonic for menu item Make Main Variation. Leave empty for no mnemonic.</extrac
     <message>
         <source>P</source>
         <extracomment>Mnemonic for menu Open Recent. Leave empty for no mnemonic.</extracomment>
-        <translation>Y</translation>
+        <translation type="vanished">Y</translation>
     </message>
     <message>
         <source>S</source>
@@ -1226,7 +1226,7 @@ Mnemonic for menu item Make Main Variation. Leave empty for no mnemonic.</extrac
     <message>
         <source>%1. %2</source>
         <extracomment>Format in recent files menu. First argument is the file number, second argument the file name.</extracomment>
-        <translation>%1. %2</translation>
+        <translation type="vanished">%1. %2</translation>
     </message>
 </context>
 <context>
@@ -1298,6 +1298,33 @@ Mnemonic for menu item Make Main Variation. Leave empty for no mnemonic.</extrac
         <source>Shift</source>
         <extracomment>Shortcut modifier key as displayed in menu item text (abbreviate if long)</extracomment>
         <translation>Shift</translation>
+    </message>
+</context>
+<context>
+    <name>MenuRecentFiles</name>
+    <message>
+        <source>Open Recent</source>
+        <translation>Åpne nylige</translation>
+    </message>
+    <message>
+        <source>P</source>
+        <extracomment>Mnemonic for menu Open Recent. Leave empty for no mnemonic.</extracomment>
+        <translation>Y</translation>
+    </message>
+    <message>
+        <source>%1. %2</source>
+        <extracomment>Format in recent files menu. First argument is the file number, second argument the file name.</extracomment>
+        <translation>%1. %2</translation>
+    </message>
+    <message>
+        <source>Clear List</source>
+        <extracomment>Menu item for clearing the recent files list</extracomment>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>C</source>
+        <extracomment>Mnemonic for menu item Recent Files/Clear List. Leave empty for no mnemonic.</extracomment>
+        <translation type="unfinished"></translation>
     </message>
 </context>
 <context>
